# naturalsize

./: .gitattributes  .gitignore  LICENSE.txt  README.md  SECURITY.md  deploy.bat  pyproject.toml  requirements.txt
src/naturalsize/: __init__.py
src/naturalsize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/naturalsize_LK-Software/: __init__.py  naturalsize.py
