[project]
name = "naturalsize"
version = "1.0.6"
authors = [
  { name="Leander Kafemann", email="leander@kafemann.berlin" },
]
description = "get human-readable size of files"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LK-PyPi/naturalsize"