[project]
name = "pycols"
version = "1.0.1"
authors = [
  {name="Leander Kafemann", email="leander@kafemann.berlin" },
]
description = "display colors in console"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"colorama",
]

[project.urls]
Homepage = "https://github.com/LeanderKafemann/pycols"